--- a/conf/application.conf
+++ b/conf/application.conf
@@ -32,18 +32,24 @@ application.langs="en"
 # ~~~~~ 
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
-#
-db.default.driver=org.h2.Driver
-db.default.url="jdbc:h2:mem:play"
+#default
+#db.default.driver=org.h2.Driver
+#db.default.url="jdbc:h2:mem:play"
 #db.default.url="jdbc:h2:mem:tax"
 # db.default.user=sa
 # db.default.password=""
-#mysql
-#db.default.driver=com.mysql.jdbc.Driver
-#db.default.url="jdbc:mysql://localhost/tax"
-##db.default.url="jdbc:mysql://localhost/tax?characterEncoding=UFT8"
-#db.default.user="tax"
-#db.default.password="tax"
+
+#MySQL
+db.default.driver=com.mysql.jdbc.Driver
+db.default.url="jdbc:mysql://localhost/tax"
+db.default.user="tax"
+db.default.password="tax"
+
+#PostgreSQL
+#db.default.driver=org.postgresql.Driver
+#db.default.url="jdbc:postgresql://localhost:5432/tax"
+#db.default.user="postgres"
+#db.default.password="postgres"
 
 #
 # You can expose this datasource via JNDI if needed (Useful for JPA)
